<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">
        <EditText android:id="@+id/edit_message"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_send"
            android:onClick="sendMessage" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="1dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_turn_off_the_light"
            android:onClick="turnOffTheLight"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_turn_on_the_light"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp">
        <fragment android:name="com.example.sth.newjustbecause.ImageViewFragment"
            android:id = "@+id/image_view_fragment"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>
</RelativeLayout>

